refactor: Use deferred agent instance patch whenever possible, fallback to immediate update for finalization and ai agent task